# ska-cicd-oci-scanning

./: .gitignore  .gitlab-ci.yml  CODEOWNERS  LICENSE  Makefile  README.md  ansible.cfg  pyproject.toml  requirements.txt
playbooks/: ansible.cfg  oci_scan.yml
playbooks/roles/copy_reporter/defaults/: main.yml
playbooks/roles/copy_reporter/tasks/: main.yml
playbooks/roles/copy_reporter/templates/: reporter.py.j2
playbooks/roles/report_vulnerabilities/defaults/: main.yml
playbooks/roles/report_vulnerabilities/files/: reporter.py
playbooks/roles/report_vulnerabilities/tasks/: main.yml
playbooks/roles/scan_containerd/defaults/: main.yml
playbooks/roles/scan_containerd/tasks/: main.yml
playbooks/roles/scan_docker/defaults/: main.yml
playbooks/roles/scan_docker/tasks/: main.yml
playbooks/roles/scan_podman/defaults/: main.yml
playbooks/roles/scan_podman/tasks/: main.yml
