[tool.poetry]
name = "ska-cicd-oci-scanning"
version = "0.0.1"
description = ""
authors = ["Diogo Regateiro <diogo.regateiro@atlar.pt>"]

[tool.poetry.dependencies]
python = "^3.6"
ansible = "^2.10.7"

[tool.poetry.dev-dependencies]
ansible-lint = "^5.0.7"
ansible-lint-junit = "^0.17.4"
yamllint = "^1.26.1"
flake8 = "^4.0.1"
yamllint-junit = "^0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
